Grid displayed on top of objects in orthographic view #55190

Closed
opened 2018-05-24 19:33:47 +02:00 by Hjalti Hjálmarsson · 6 comments

System Information
Xbuntu / AMD

Blender Version
1cf17b2

Short description of error
In orthographic side view the grid is displayed as a plane in the middle of the scene, penetrating objects. To be clear I'm talking about the grid, not the colored axis lines. Previous Blender versions have always drawn the grid in the background in orthographic view.

Exact steps for others to reproduce the error
New file
Create a suzanne head
Go to side orthographic view

**System Information** Xbuntu / AMD **Blender Version** 1cf17b2 **Short description of error** In orthographic side view the grid is displayed as a plane in the middle of the scene, penetrating objects. To be clear I'm talking about the grid, not the colored axis lines. Previous Blender versions have always drawn the grid in the background in orthographic view. **Exact steps for others to reproduce the error** New file Create a suzanne head Go to side orthographic view
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti

Added subscriber: @cedriclepiller

Added subscriber: @cedriclepiller

Indeed.
image.png

Same for the 3dview, I always think my object isn't well placed.
image.png

Indeed. ![image.png](https://archive.blender.org/developer/F3448947/image.png) Same for the 3dview, I always think my object isn't well placed. ![image.png](https://archive.blender.org/developer/F3448958/image.png)
Clément Foucault was assigned by Dalai Felinto 2018-05-25 00:44:40 +02:00

@cedriclepiller The perpective thing is not related. It's something I introduce to get rid of Z fighting with planes placed at the origins. But I admit it's not practical. I have to revisit this later.

@cedriclepiller The perpective thing is not related. It's something I introduce to get rid of Z fighting with planes placed at the origins. But I admit it's not practical. I have to revisit this later.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 4ca4e64d25

This issue was referenced by 4ca4e64d25f69eb4cbb96084fb688b69484e1507
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55190
No description provided.