Grid: Do not go over objects in front/side ortho views.

Fixes T55190 Grid displayed on top of objects in orthographic view